Added custom domain

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal-status-page",
   "version": "0.1.0",
-  "homepage": "https://aydrian.github.io/personal-status-page",
+  "homepage": "http://status.aydrian.me/",
   "private": true,
   "dependencies": {
     "react": "^15.5.4",
